--- a/README.org
+++ b/README.org
@@ -3,11 +3,17 @@
 *** DONE Create function to init enemy 
 **** DONE Create structure for enemy
 ***** DONE Create battle system
-****** TODO Create "CreateEnemy" function
-******* TODO Create "CreatePlayer" function
-
+****** DONE Create money system
+******* TODO Create "CreateEnemy" function
+******** TODO Create "CreatePlayer" function
+********* TODO Create bussiness system
+********** TODO Create save-game
 [[https://github.com/unixiscool][My github account]]
 
 #+begin_src
 ~source.cpp line 5-9: some 'structure' for our player
+#+end_src
+
+#+begin_src How to build project
+g++ source.cpp function.cpp header.h -o bin
 #+end_src
