--- a/README.org
+++ b/README.org
@@ -1,13 +1,13 @@
 * DONE Create some 'structure' for our player
 ** DONE Create function to init player
-*** DONE Create function to init enemy 
-**** DONE Create structure for enemy
-***** DONE Create battle system
-****** DONE Create money system
-******* TODO Create "CreateEnemy" function
-******** TODO Create "CreatePlayer" function
-********* TODO Create bussiness system
-********** TODO Create save-game
+** DONE Create function to init enemy 
+*** DONE Create structure for enemy
+*** DONE Create battle system
+**** DONE Create money system
+***** TODO Create "CreateEnemy" function
+***** TODO Create "CreatePlayer" function
+****** TODO Create bussiness system
+****** TODO Create save-game
 
 [[https://github.com/unixiscool][My github account]]
 
